# Escape-Room-Demonstration-in-OpenGL

./: .gitignore  CMakeLists.txt  README.md
Libraries/includes/glad/: glad.h
Libraries/lib/Debug/: assimp-vc142-mtd.exp
Libraries/lib/Release/: assimp-vc142-mt.exp
VecMat/: arithmetic.cpp  matrix.hpp  vector.hpp
include/: README.md
include/Features/: camera.hpp  indexBuffer.hpp  model.hpp  object.hpp  render.hpp  renderer.hpp  shader.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp
include/VecMat/: arithmetic.hpp  matrix.hpp  vector.hpp
includes/Features/: camera.hpp  mesh.hpp  model.hpp  render.hpp  shader.hpp  stb_image.h
resources/Glad/: glad.c
resources/models/Door/: door.mtl
resources/models/Room/: blue.mtl  candle.mtl  greenC.mtl  redC.mtl  room.mtl  room2.mtl  room4walls.mtl  window.mtl  yellow.mtl  yellowC.mtl
resources/shaders/: fs.txt  lightvertex.vs  mainfragment.fs  mainvertex.vs  vs.txt
source/: main.cpp
source/Features/: camera.cpp  indexBuffer.cpp  object.cpp  renderer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
src/: main.cpp
src/Features/: camera.cpp  shader.cpp  texture.cpp
